# util

./: CMakeLists.txt  LICENSE  LICENSE.TXT  README.md  assert_handler.h  assert_handler_c.c  assert_handler_cpp.cpp  build_tests.sh  exception_checking.h  msvc_build_tests.bat  programming_by_contract.cpp  programming_by_contract.h  programming_by_contract_c.c  todo.txt
.github/workflows/: checkmarx.yml  cmake.yml  codeql.yml  msvc.yml
example_assert_handlers/: assert_handler_c.c  assert_handler_cpp.cpp
example_handlers/: assert_handler_c.c
experimental/: BitpackedUintVector.h  README.md  exception_checking.h
include/hurchalla/programming_by_contract/: assert_handler.h  programming_by_contract.h  programming_by_contract_pretty.h
include/hurchalla/util/: BitpackedUintVector.h  Unroll.h  assert_handler.h  branchless_large_shift_left.h  branchless_shift_left.h  branchless_shift_left_to_hilo.h  branchless_shift_right.h  branchless_small_shift_right.h  branchless_two_times_shift_left_to_hilo.h  compiler_macros.h  conditional_select.h  count_leading_zeros.h  count_trailing_zeros.h  cselect_on_bit.h  programming_by_contract.h  shift_left.h  shift_left_limited.h  shift_right.h  shift_right_limited.h  signed_multiply_to_hi_product.h  signed_multiply_to_hilo_product.h  signed_square_to_hilo_product.h  sized_uint.h  unsigned_multiply_to_hi_product.h  unsigned_multiply_to_hilo_product.h  unsigned_square_to_hilo_product.h
include/hurchalla/util/detail/: ImplBitpackedUintVector.h  impl_conditional_select.h  impl_count_leading_zeros.h  impl_count_trailing_zeros.h  util_programming_by_contract.h
include/hurchalla/util/detail/platform_specific/: impl_branchless_large_shift_left.h  impl_branchless_shift_left.h  impl_branchless_shift_left_to_hilo.h  impl_branchless_shift_right.h  impl_branchless_small_shift_right.h  impl_branchless_two_times_shift_left_to_hilo.h  impl_cselect_on_bit.h  impl_shift_left.h  impl_shift_left_limited.h  impl_shift_right.h  impl_shift_right_limited.h  impl_signed_multiply_to_hi_product.h  impl_signed_multiply_to_hilo_product.h  impl_signed_square_to_hilo_product.h  impl_unsigned_multiply_to_hi_product.h  impl_unsigned_multiply_to_hilo_product.h  impl_unsigned_square_to_hilo_product.h
include/hurchalla/util/experimental/: x64_impl_cselect_on_bit.h
include/hurchalla/util/traits/: extensible_make_signed.h  extensible_make_unsigned.h  is_equality_comparable.h  safely_promote_unsigned.h  ut_numeric_limits.h
test/: CMakeLists.txt  EnableMaxWarnings.cmake  FetchGoogleTest.cmake  test_BitpackedUintVector.cpp  test_Unroll.cpp  test_branchless_shifts.cpp  test_compiler_macros.cpp  test_conditional_select.cpp  test_count_leading_zeros.cpp  test_count_trailing_zeros.cpp  test_cselect_on_bit.cpp  test_experimental_cselect_on_bit.cpp  test_extensible_make_signed.cpp  test_extensible_make_unsigned.cpp  test_inactive_programming_by_contract.cpp  test_is_equality_comparable.cpp  test_ndebug_programming_by_contract.cpp  test_programming_by_contract.cpp  test_safely_promote_unsigned.cpp  test_shifts.cpp  test_signed_multiply_to_hi_product.cpp  test_signed_multiply_to_hilo_product.cpp  test_signed_square_to_hilo_product.cpp  test_sized_uint.cpp  test_unreachable.cpp  test_unsigned_multiply_to_hi_product.cpp  test_unsigned_multiply_to_hilo_product.cpp  test_unsigned_square_to_hilo_product.cpp  test_ut_numeric_limits.cpp  testhelper_assert_handler.cpp  testhelper_assert_handler.h  uint128.h
